<resources>
    <string name="app_name">ScoreTracker</string>
    <string name="admin_txt">¿Eres administrador de un torneo o quieres registrar uno?, Ingresa aquí.</string>
    <string name="admin_log">Administrar Liga</string>
    <string name="information">Coloca el nombre del torneo para consultar la información.</string>
    <string name="consult">Consultar liga</string>
    <string name="id_tournament">Nombre del torneo</string>

    <!--  Strings Admin_League_Activity  -->

    <string name="adLeague_Welcome">Bienvenido a ScoreTracker</string>
    <string name="adLeague_User">Email</string>
    <string name="adLeague_Password">Contraseña</string>
    <string name="adLeague_LogIn">Iniciar Sesión</string>
    <string name="adLeague_NewUser"><u>Quiero registrarme.</u></string>
    <string name="adLeague_RecPass"><u>Olvidé mi contraseña.</u></string>

    <!--  Strings Register_Activity  -->

    <string name="register">Registrarme</string>
    <string name="name">Nombre Completo</string>
    <string name="address">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password2">Confirmar Contraseña</string>
    <string name="verification_email">Correo registrado</string>
    <string name="verification_txt">Presiona en el botón para recibir un nuevo correo de verificación</string>
    <string name="verification">Re enviar</string>

    <!-- Strings Lost_Password -->

    <string name="change">Cambiar contraseña</string>

    <!--  Strings NewTournament_Activity  -->

    <string name="tv_explain">Para que tu comunidad deportiva pueda consultar la información de este torneo debes darles el nombre exacto que coloques en este apartado y ellos deben colocar el nombre al inicio de la aplicación.</string>
    <string name="tv_tournamentName">Nombre del Torneo</string>
    <string name="btn_addTournament">Agregar torneo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Strings dialog_edit_team  -->
    <string name="Pj">Coloca los partidos jugados de este equipo hasta el momento.</string>
    <string name="Gol_more">Coloca los goles a favor de este equipo hasta el momento.</string>
    <string name="Gol_less">Coloca los goles en contra de este equipo hasta el momento.</string>
    <string name="Pts">Coloca los puntos de este equipo hasta el momento.</string>

</resources>