<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_start"
    tools:context=".AdminLeague">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adLeague_Welcome"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="38sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cvWelcome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/et_User"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/adLeague_User"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/adLeague_Password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/background_button"
                android:text="@string/adLeague_LogIn"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/btnLostPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/adLeague_RecPass"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="34sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="ó"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/adLeague_NewUser"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="34sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>