<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_start"
    tools:context=".LogIn">

    <ImageView
        android:layout_width="361dp"
        android:layout_height="277dp"
        android:layout_above="@+id/cardView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="23dp"
        android:src="@drawable/ic_player"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="352dp"
        android:layout_height="325dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <Button
                android:id="@+id/btnAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_button"
                android:text="@string/admin_log"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/information"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_tournament"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnConsL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_button"
                android:text="@string/consult"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</RelativeLayout>