<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_start"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Regístrate a ScoreTracker"
                android:textAlignment="center"
                android:textColor="@color/background_text"
                android:textSize="38sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvWelcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="110dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/etRName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="25sp"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/etRAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/address"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="25sp"
                android:autofillHints="emailAddress"/>

            <EditText
                android:id="@+id/etRPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etRPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#E4E4E4"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnRCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/background_button"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>