<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_start"
    android:orientation="vertical"
    tools:context=".NewTournament">

    <androidx.cardview.widget.CardView
        android:id="@+id/carvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="39dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_explain"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etTournamentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tv_tournamentName"
                android:singleLine="true"
                android:textColor="@color/background_text"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnCreateTournament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:backgroundTint="@color/background_button"
                android:text="@string/btn_addTournament"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="361dp"
        android:layout_height="277dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_fship"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</RelativeLayout>
